--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <title>Counter</title>
-<head> <meta charset="UTF-8">
+<head> <meta charset="UTF-8" name ="viewport" content="width=device-width,initial-scale=1.0" >
     <link rel="stylesheet" href="styles.css"/>
 </head>
     <body><h1><strong>Counter</strong></h1>
